--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.4",
     "nodemon": "^3.1.0"
   }
